--- a/src/app/postList/components/post-list.component.html
+++ b/src/app/postList/components/post-list.component.html
@@ -1,6 +1,6 @@
 
   <mat-card>
-    <mat-card-header *ngFor="let data of data |async">
+    <mat-card-header *ngFor="let data  ">
       <mat-card-title ><p>{{ data.title}}</p></mat-card-title>
     </mat-card-header>
     <mat-card-content>
