--- a/src/app/postList/components/post-list.component.html
+++ b/src/app/postList/components/post-list.component.html
@@ -1,7 +1,7 @@
 
   <mat-card>
-    <mat-card-header *ngFor="let data  ">
-      <mat-card-title ><p>{{ data.title}}</p></mat-card-title>
+    <mat-card-header *ngFor="let item of dados">
+      <mat-card-title ><p>{{ item.title}}</p></mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <p>Conteúdo do card</p>
@@ -13,3 +13,4 @@
     </mat-card-actions>
   </mat-card>
 
+<h1></h1>
