--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,49 @@
-<app-home></app-home>
-<blogangular></blogangular>
+<mat-toolbar class="navbar">
+  <mat-toolbar-row>
+  <button mat-icon-button>
+  <mat-icon (click)="sidenav.toggle();"><i class="fa-solid fa-bars"></i></mat-icon>
+</button>
+<h1>Blog</h1>
+  </mat-toolbar-row>
+</mat-toolbar>
 
-        
+ 
+
+<mat-sidenav-container>
+   <mat-sidenav #sidenav opened="true" mode="side"> 
+      <mat-nav-list>
+      <a mat-list-item>Home</a>
+      <a mat-list-item>User</a>
+      <a mat-list-item>Post</a>
+      </mat-nav-list>
+</mat-sidenav> 
+<mat-sidenav-content>
+
+
+  
+  <div style="height: 88vh;">
+    <router-outlet>
+      <mat-card>
+        <mat-card-header *ngFor="let item ">
+          <mat-card-title ><p>{{ item.key}}: {{ item.title }} </p></mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p>Conteúdo do card</p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>
+            <p>Botão</p>
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </router-outlet>   
+  </div>
+</mat-sidenav-content>
+</mat-sidenav-container>
+
+
+
+
 
 
 
